--- a/templates/_layouts/base.html
+++ b/templates/_layouts/base.html
@@ -1,13 +1,15 @@
+<!-- Template base.html-->
 <!doctype html>
-<html lang=pt-br>
+<html lang="pt-br">
     <head>
         <meta charset="UTF-8">
         <meta name="viewport"
               content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
         <meta http-equiv="X-UA-Compatible" content="ie=edge">
-        <title>Document</title>
+        <title>{% block title %}Title{% endblock %}</title>
     </head>
     <body>
-        <h1>Index</h1>
+        {% block conteudo %}
+        {% endblock %}
     </body>
 </html>
