--- a/templates/eventos_academicos/index.html
+++ b/templates/eventos_academicos/index.html
@@ -5,4 +5,12 @@
 
 {% block conteudo %}
     <h1>Bem-Vindo</h1>
+    <h2>{{ user.first_name }} {{ user.last_name }}</h2>
+    {% if user.is_authenticated %}
+        <h2>Data de nascimento: {{ user.birth }}</h2>
+        <h2>Sua idade: {{ user.age }} anos</h2>
+        <a href="{% url 'account_logout' %}">Logout</a>
+    {% else %}
+        <a href="{% url 'account_login' %}">Login</a>
+    {% endif %}
 {% endblock %}
